--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\""
+    "start": "next start"
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.12.0",
@@ -16,8 +15,8 @@
     "prismic-reactjs": "^1.3.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-moment": "^1.1.1",
     "react-responsive": "^8.2.0",
+    "react-moment": "^1.1.1",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
