--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "postinstall": "husky install"
+    "start": "next start"
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.12.0",
@@ -17,8 +15,8 @@
     "prismic-reactjs": "^1.3.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-responsive": "^8.2.0",
     "react-moment": "^1.1.1",
+    "react-responsive": "^8.2.0",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
@@ -33,7 +31,6 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-sonarjs": "^0.6.0",
     "eslint-plugin-unicorn": "^29.0.0",
-    "husky": "^5.2.0",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
