--- a/package.json
+++ b/package.json
@@ -7,15 +7,21 @@
     "build": "next build",
     "start": "next start",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "postinstall": "husky install"
+    "postinstall": "husky install",
+    "start-dev": "cross-env NODE_ENV=dev npm-run-all --parallel start:app start:server",
+    "start:app": "PORT=3000 node server.js",
+    "start:server": "netlify-lambda serve functions",
+    "postinstall-lambda": "netlify-lambda install"
   },
   "dependencies": {
     "axios": "^0.21.1",
     "babel-plugin-styled-components": "^1.12.0",
+    "express": "^4.17.1",
     "framer-motion": "^4.1.13",
-    "intersection-observer": "^0.12.0",
     "https": "^1.0.0",
+    "intersection-observer": "^0.12.0",
     "moment": "^2.29.1",
+    "netlify-lambda": "^2.0.6",
     "next": "10.0.7",
     "prismic-javascript": "^3.0.2",
     "prismic-reactjs": "^1.3.3",
